--- a/README
+++ b/README
@@ -5,3 +5,5 @@ C:\Users\Administrator\Arx\date\<year>\<month>\<day>\*.jpg
 Python 2.x
 
 -- dennis(a)yurichev.com
+
+Requires dateutil and six python modules (included in download)
